<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/type0"
        android:icon="@drawable/ic_bottom_home_24"
        android:title="@string/type0" />
    <item
        android:id="@+id/type1"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:title="@string/type1" />
    <item
        android:id="@+id/type2"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:title="@string/type2" />
    <item
        android:id="@+id/type3"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:title="@string/type3" />
    <item
        android:id="@+id/type4"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:title="@string/type4" />
</menu>