<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/series_pay_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/aos_series_pay_bg">

    <LinearLayout
        android:id="@+id/series_pay_top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/series_pay_iv_close"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/series_pay_top_bar_title_wrap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/series_pay_title"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/series_price_title"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/series_pay_des"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/series_price_des"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/series_pay_iv_close"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginRight="10dp"
        android:src="@mipmap/series_pay_list_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/series_pay_top_bar" />


    <View
        android:id="@+id/series_pay_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="#14FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/series_pay_top_bar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/series_pay_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:importantForAccessibility="no"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/series_pay_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series_pay_line"
        app:layout_scrollFlags="scroll|enterAlways" />

    <TextView
        android:id="@+id/series_pay_confirm"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#E6CEA1"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:padding="12dp"
        android:text="@string/series_price_confirm_pay"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series_pay_list"
        android:visibility="visible"/>


</androidx.constraintlayout.widget.ConstraintLayout>